# Gst-automated-testing

./: .env.example  .gitignore  AI用例编写模板.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  conftest.py  install_allure.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.py  run_with_report.bat  save_storage.js  save_storage.py
.claude/: settings.local.json
config/: allure.properties  config.yaml  playwright.config.json  pytest.ini
config/environments/: dev.yaml  prod.yaml  test.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ALLURE_SETUP.md  LOGIN_STATE_CACHE.md
elements/: __init__.py  base_locators.py  dashboard_locators.py  login_locators.py  online_consultation_locators.py  user_management_locators.py
jenkins/: Jenkinsfile
jenkins/groovy/: notification.py
jenkins/scripts/: cleanup.sh  run_tests.sh  setup.sh
pages/: __init__.py  base_page.py  base_page_sync.py  dashboard_page.py  login_page.py  online_consultation_page.py  online_consultation_page_sync.py  user_management_page.py
reports/.auth/: state.json
scripts/: debug_patient_list.py  generate_login_state.py  inspect_elements.py  inspect_login_page.py  interactive_browser.py  launch_browser_with_auth.py  open_browser.py  quick_check.py  quick_login.py  record_actions.py
testcases/ui/: test_basic_navigation.py  test_dashboard.py  test_login.py  test_online_consultation.py  test_online_consultation_sync.py  test_user_management.py
tests/: conftest.py  conftest.py.backup  page_inspection.txt  save_storage.py  storage_state.json
tests/test_api/: test_user_api.py
tests/test_cases/: __init__.py  test_login.py  test_online_consultation.py
utils/: api_utils.py  config.py  config_loader.py  db_utils.py  html_report.py  jenkins_utils.py  logger.py  screenshot.py  screenshot_sync.py  wait_utils.py  wait_utils_sync.py  webdriver.py  wecom_notify.py
